--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,8 @@ pylint = "*"
 [packages]
 fuzzywuzzy = "*"
 mysql-connector-python = "*"
-psycopg2 = "*"
 python-levenshtein = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.5"
