--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "python.linting.pylintEnabled": false,
+    "python.formatting.provider": "yapf",
     "python.linting.enabled": true,
-    "python.linting.mypyEnabled": false,
+    "python.linting.mypyEnabled": true,
     "python.linting.pycodestyleEnabled": true,
-    "python.formatting.provider": "yapf"
+    "python.linting.pylintEnabled": true
 }
